# alphax_grc_v1_9_0

./: INSTALLATION_GUIDE.md  MANIFEST.in  PHASES.md  README.md  pyproject.toml
alphax_grc/: ASSESSMENT_ENGINE_MANUAL.md  CONSULTANT_QUESTIONNAIRE_LIBRARY.md  PROCESS_MANUAL.md  api.py  dashboards_live.py  hooks.py  install.py  notifications.py
alphax_grc/alphax_grc/: modules.txt
alphax_grc/alphax_grc/data/: ecc2_2024_catalog.json  engagement_phase_templates.json  gdpr_catalog.json  iso42001_catalog.json
alphax_grc/alphax_grc/doctype/alphax_grc_settings/: alphax_grc_settings.json  alphax_grc_settings.py
alphax_grc/alphax_grc/doctype/grc_action_plan/: grc_action_plan.json  grc_action_plan.py
alphax_grc/alphax_grc/doctype/grc_aramco_audit_firm/: grc_aramco_audit_firm.json  grc_aramco_audit_firm.py
alphax_grc/alphax_grc/doctype/grc_aramco_ccc_engagement/: grc_aramco_ccc_engagement.json  grc_aramco_ccc_engagement.py
alphax_grc/alphax_grc/doctype/grc_aramco_certificate/: grc_aramco_certificate.json  grc_aramco_certificate.py
alphax_grc/alphax_grc/print_format/: grc_assessment_run_report.html  grc_branded_seeder.py
alphax_grc/alphax_grc/workflow/: grc_audit_finding_workflow.json  grc_exception_workflow.json
alphax_grc/config/: desktop.py
alphax_grc/manuals/: POLICY_SAMPLES.md  PROCESS_MANUAL.md  TECHNICAL_MANUAL.md  USER_MANUAL.md
alphax_grc/public/css/: grc_command_center.css  grc_global_theme.css  grc_neo_hub.css  grc_reports.css
alphax_grc/public/js/: grc_dashboard_live.js  grc_theme_loader.js  grc_visual_feast.js
(+226 files in other folders)
